# rust_radio

./: Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md
book/src/gnss/: README.md  acquisition.md  pvt.md  tlm_decode.md  tracking.md
examples/: 01_l1_ca_acquisition.rs  02_l1_ca_subframe_decode.rs  02_l1_ca_tracking.rs  03_l1_ca_subframe_decode.rs  04_l1_ca_receiver.rs  05_l1_ca_ephemerides.rs  06_l1_ca_tracking_verbose.rs  10_l2c_acquisition.rs  11_l2_cm_receiver.rs  11_l2_cm_tracking.rs  12_l2c_receiver.rs  13_l2_cm_receiver.rs  14_l2c_receiver.rs  40_fft_performance.rs
src/: lib.rs
src/block/: mod.rs  series.rs
src/block/acquire_and_track/: mod.rs  tests.rs
src/block/block_tree_sync_static/: acquire_and_track.rs  mod.rs  split_and_merge.rs
src/filters/: matched_filter.rs  mod.rs
src/fourier_analysis/: mod.rs
src/gnss/: mod.rs
src/gnss/acquisition/: basic_pcps.rs  mod.rs
src/gnss/channel/: mod.rs  track_and_tlm.rs
src/gnss/common/: mod.rs
src/gnss/common/acquisition/: basic_pcps.rs  fast_pcps.rs  mod.rs  two_stage_pcps.rs
src/gnss/common/tracking/: mod.rs
src/gnss/constants/: mod.rs
src/gnss/gps_l1_ca/: mod.rs  signal_modulation.rs
src/gnss/gps_l2c/: mod.rs  signal_modulation.rs  tracking.rs  tracking_cl.rs  tracking_cm.rs
src/gnss/pvt/: mod.rs
src/gnss/telemetry_decode/: mod.rs
src/gnss/tracking/: lock_detectors.rs  mod.rs
src/io/: mod.rs
src/types/: mod.rs
src/types/even_odd_iter/: ._mod.rs  mod.rs
src/types/even_odd_slice/: mod.rs
src/utils/: bools_to_int.rs  kinematics.rs  mod.rs
(+32 files in other folders)
