[package]
name = "rust_radio"
edition = "2018"
version = "0.1.0"
authors = ["johnstanford"]

[dependencies]
byteorder = "1.2.6"
clap = "2.33.0"
colored = "1.8.0"
dirs = "2.0.1"
nalgebra = "0.18.0"
num-complex = "0.2.3"
regex = "1.3.1"
rustfft = "3.0.0"
tokio = { version="0.2.22", features=["full"] }

serde = { version = "1.0.60", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0.39"

